--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/App.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/App.xaml
@@ -6,7 +6,7 @@
          <ResourceDictionary>
              <ResourceDictionary.MergedDictionaries>
                  <ResourceDictionary>
-                     <local:Bootstrapper x:Key="Bootstrapper"></local:Bootstrapper>
+                     <local:AppBootstrapper x:Key="bootstrapper"></local:AppBootstrapper>
                  </ResourceDictionary>
              </ResourceDictionary.MergedDictionaries>
          </ResourceDictionary>
