--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GameEditor.Wcf.Harness.Wpf.Views.TestView"
+﻿<UserControl x:Class="GameEditor.Wcf.Harness.Wpf.Views.ArmyUnitTabView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,9 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <StackPanel>
-            <TextBox x:Name="Name"></TextBox>
-            <Button x:Name="SayHello" Content="Click Me"></Button>
-        </StackPanel>
+            
     </Grid>
 </UserControl>
