--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ShellView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ShellView.xaml
@@ -1,20 +1,8 @@
 ﻿<Window x:Class="GameEditor.Wcf.Harness.Wpf.Views.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views">
     <DockPanel>
-        <TabControl x:Name="Items">
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding DisplayName}"></TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-        </TabControl>
+        <TabControl Name="Items" />
     </DockPanel>
 </Window>
