--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
@@ -1,12 +1,17 @@
 ﻿<UserControl x:Class="GameEditor.Wcf.Harness.Wpf.Views.ArmyUnitTabView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <GridSplitter Grid.Column="1"/>
+        <ContentControl Grid.Column="0" Name="ArmyUnitList" />
+        <DockPanel Grid.Column="2">
+            <ContentControl Name="ArmyUnitDetail" />
+        </DockPanel>
     </Grid>
 </UserControl>
