- Created LabelCombobox - Bound the Enumerated source to the LabelCombobox in ArmyUnitDetail ViewModel

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitDetailView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitDetailView.xaml
@@ -25,6 +25,10 @@
             <ContentControl Name="IsChariotControl"/>
             <ContentControl Name="IsDoubleElementControl"/>
             <ContentControl Name="IsMountedInfantryControl"/>
+            <ContentControl Name="DisciplineTypeControl"/>
+            <ContentControl Name="UnitTypeControl"/>
+            <ContentControl Name="DispositionTypeControl"/>
+            <ContentControl Name="GradeTypeControl"/>
         </StackPanel>
     </DockPanel>
 </UserControl>
