--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/LabelCheckboxView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/LabelCheckboxView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views">
     <DockPanel>
-        <TextBlock Name="Label" Width="{Binding LabelWidth}" Margin="5" DockPanel.Dock="Left"/>
+        <TextBlock Name="Label" TextAlignment="Right" Width="{Binding LabelWidth}" Margin="5" DockPanel.Dock="Left" />
         <CheckBox Name="CheckBox" Margin="5"/>
     </DockPanel>
 </UserControl>
