- Implemented a very basic keycheck on the label textbox VM which publishes a CheckDirtyStatus event which other VM's can handle - Trying to figure out why Army Unit lists and Allied Army lists are not updating when a new army is selected

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/LabelTextboxView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/LabelTextboxView.xaml
@@ -1,9 +1,10 @@
 ﻿<UserControl x:Class="GameEditor.Wcf.Harness.Wpf.Views.LabelTextboxView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views">
+             xmlns:local="clr-namespace:GameEditor.Wcf.Harness.Wpf.Views"
+             xmlns:cal="http://www.caliburnproject.org">
     <DockPanel>
         <TextBlock Name="Label" Width="100" Margin="5" DockPanel.Dock="Left"/>
-        <TextBox Name="TextBox" Margin="5" TextWrapping="{Binding TextWrapping}"/>
+        <TextBox Name="TextBox" Margin="5" TextWrapping="{Binding TextWrapping}" cal:Message.Attach="[Event KeyDown] = [Action KeyPressed($executionContext)]" />
     </DockPanel>
 </UserControl>
