- Created AllyDetailView - Create a base DetailViewModel which handles common aspects of detail view models

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitTabView.xaml
@@ -14,6 +14,7 @@
             <ContentControl Name="ArmyUnitList" />
         </DockPanel>
         <DockPanel Grid.Column="2">
+            <ContentControl Name="AllyDetail" DockPanel.Dock="Bottom"/>
             <ContentControl Name="ArmyUnitDetail" />
         </DockPanel>
     </Grid>
