- Major refactor providing a base class for both List and Detal VM - Provided a base interface which enforces Add, Delete, Update, Copy and Select functions as well as guard conditions

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitDetailView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/ArmyUnitDetailView.xaml
@@ -12,6 +12,7 @@
             <Button Name="Update" Content="Update" Margin="5"></Button>
             <Button Name="Delete" Content="Delete" Margin="5"></Button>
         </StackPanel>
+        <ContentControl Name="AlternativeTabControl" DockPanel.Dock="Bottom"/>
         <StackPanel>
             <ContentControl Name="IdControl"/>
             <ContentControl Name="NameControl"/>
