- Added field details to Alternative Unit List and Alternative Unit Detail VM's - Updated all Content Controls to set IsTabStop to false in order that only the child control is available for tab stop, not the container - Fixed a bug in Army Unit List VM where the selected item was null - Placed Alt Unit Detail into a scrollable panel

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/AllyDetailView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/AllyDetailView.xaml
@@ -12,12 +12,12 @@
             <Button Name="Delete" Content="Delete" Margin="5"></Button>
         </StackPanel>
         <StackPanel>
-            <ContentControl Name="AllyListControl"/>
-            <ContentControl Name="AllyNameControl"/>
-            <ContentControl Name="BookControl"/>
-            <ContentControl Name="ListControl"/>
-            <ContentControl Name="MinYearControl"/>
-            <ContentControl Name="MaxYearControl"/>
+            <ContentControl Name="AllyListControl" IsTabStop="False"/>
+            <ContentControl Name="AllyNameControl" IsTabStop="False"/>
+            <ContentControl Name="BookControl" IsTabStop="False"/>
+            <ContentControl Name="ListControl" IsTabStop="False"/>
+            <ContentControl Name="MinYearControl" IsTabStop="False"/>
+            <ContentControl Name="MaxYearControl" IsTabStop="False"/>
         </StackPanel>
     </DockPanel>
 </UserControl>
