- Changed Alternative Unit Name control to a combo list - Added Alternative Unit Id control

--- a/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/AlternativeUnitDetailView.xaml
+++ b/src/GameEditor/GameEditor.Wcf.Harness.Wpf/Views/AlternativeUnitDetailView.xaml
@@ -17,6 +17,7 @@
                     <ContentControl Name="PercentControl" IsTabStop="False"/>
                     <ContentControl Name="UpgradeControl" IsTabStop="False"/>
                 </StackPanel>
+                <ContentControl Name="AlternativeIdControl" IsTabStop="False"/>
             </StackPanel>
         </DockPanel>
     </ScrollViewer>
